--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+    <center>
     <h2>Czytanie</h2>
     <img src="ksiazki1.jfif",>
     <img src="ksiazki2.jfif",>
     <img src="ksiazki3.jfif",>
-    <p>W wolnym czasie zajmuję się wieloma różnymi sprawami, ponieważ wiele spraw mnie interesuje. Jedanak jedną z moich ulubionych czynności jest czytanie ksiażek.</p>
-    <p>Mam w pokoju 3 bardzo duże półki z książkami, ale często jakimś magicznym sposobem pojawiają się też w innych miejscach: na podłodze, na łóżku, na  krześle, na biurku... Czytam też książki wypożyczone z biblioteki. Czytam w wielu różnych sytuacjach - rano po obudzeniu się, przed spaniem, w drodze metrem do szkoły, w przerwach między lekcjami, po szkole. Czasem czytanie książek tak bardzo mnie pochłania, że zapominam o całym świecie. Potrafię wtedy czytać, aż zorientuję się, że jest bardzo późno i powinnam już spać. Uwielbiam zarówno kupować książki w księgarniach, jak i wypożyczać je w bibliotece. Bardzo lubię dostawać w prezencie (na przykład na urodziny, na imieniny, na Boże Narodzenie) książki oraz karty podarunkowe do księgarni. Książki zawsze biorę ze sobą na wakacje - czy to w góry, czy to nad jezioro, czy to nad morze, czy to na obóz harcerski, a także na inne wyjazdy - w weekend na działkę oraz w inne miejsca - zabieram książki prawie wszędzie tam, gdzie akurat idę czy jadę. Zdarza się, że prawie cały dzień spędzam na czytaniu.</p>
-    <p>W sierpniu jechałam pociągiem z Krakowa do Koszalina czyli przez prawie całą Polskę. Podróż trwała ponad 7 godzin i niestety nie wzięłam ze sobą ani jednej książki. Bardzo mi ich wtedy brakowało. Z powodu choroby lokomocyjnej niestety nie mogę czytać książek w samochodzie i autokarze. Przeszkadza mi to szczególnie podczas długich podróży - po prostu się nudzę.</p>
-    <p>Lubię czytać różne typy książek - głównie książki przygodowe i kryminalne, chociaż nie tylko - czytam także fantastastykę oraz inne. Mam kilka ulubionych serii książek i z niecierpliwością oczekuje nowych książek ulubionych autorów i autorek. Lubię również książki, w których są ładne ilustracje, chociaż czasem zaburzają płynność czytania.</p>
+    <p>W wolnym czasie zajmuję się wieloma różnymi sprawami, ponieważ wiele spraw mnie interesuje. <br> Jednak jedną z moich ulubionych czynności jest czytanie ksiażek.</p>
+    <p>Mam w pokoju 3 bardzo duże półki z książkami, ale często jakimś magicznym sposobem pojawiają się <br> też w innych miejscach: na podłodze, na łóżku, na  krześle, na biurku... Czytam też książki wypożyczone <br> z biblioteki. Czytam w wielu różnych sytuacjach - rano po obudzeniu się, przed spaniem, w drodze <br> metrem do szkoły, w przerwach między lekcjami, po szkole. Czasem czytanie książek tak bardzo mnie <br> pochłania, że zapominam o całym świecie. Potrafię wtedy czytać, aż zorientuję się, że jest bardzo późno <br> i powinnam już spać. Uwielbiam zarówno kupować książki w księgarniach, jak i wypożyczać je w <br> bibliotece. Bardzo lubię dostawać w prezencie (na przykład na urodziny, na imieniny, na Boże <br> Narodzenie) książki oraz karty podarunkowe do księgarni.  Książki zawsze biorę ze sobą na wakacje - <br> czy to w góry, czy to nad jezioro, czy to nad morze, czy to na obóz harcerski, a także na inne wyjazdy - <br> w weekend na działkę oraz w inne miejsca - zabieram książki prawie wszędzie tam, gdzie akurat idę <br> czy jadę. Zdarza się, że prawie cały dzień spędzam na czytaniu.</p>
+    <p>W sierpniu jechałam pociągiem z Krakowa do Koszalina czyli przez prawie całą Polskę. Podróż <br> trwała ponad 7 godzin i niestety nie wzięłam ze sobą ani jednej książki. Bardzo mi ich wtedy <br> brakowało. Z powodu choroby lokomocyjnej niestety nie mogę czytać książek w samochodzie <br> i autokarze. Przeszkadza mi to szczególnie podczas długich podróży - po prostu się nudzę.</p>
+    <p>Lubię czytać różne typy książek - głównie książki przygodowe i kryminalne, chociaż nie tylko - czytam <br> także fantastastykę oraz inne.  Mam kilka ulubionych serii książek i z niecierpliwością oczekuje nowych <br> książek ulubionych autorów i autorek. Lubię również książki, w których są ładne ilustracje, chociaż <br>  czasem zaburzają płynność czytania.</p>
     <p>Chcesz wypożyczyć książkę w mokotowskiej bibliotece?</p>
     <a href="https://www.bpmokotow.waw.pl/bpmok/">kliknij tutaj</a>
+</center>
+
 </body>
 </html>
 
