--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 <div>
+    <center>
     <h2>Czytanie</h2>
+</center>
     <img src="ksiazki1.jfif",>
     <img src="ksiazki2.jfif",>
 
